Changelog for service.xbmc.tts
==============================

Current version: 0.0.20
-----------------------

Authors: ruuk, pvagner

TODO:
-----
 Android backend
 Speech for more window types that isn't automatically handled
 Fix ctypes implementation of eSpeak
 Add speed and voices to other backends
 Add xbmc audio option to more backends

EXTERNAL TODO:
--------------
 Windows and OSX installers?
 Android TTS app for android backend
 

** 0.0.21 **

Added changelog.txt
Added documentation for items in guitables.py Removed giutables.py items that were removed in frodo

** 0.0.20 and before ** 

Fix for Flite hanging XBMC on shutdown F6 key now opens the addon settings when the keymap is installed The backend currentSpeed() now returns 0 if none is set
Backend select dialog now handled manually Added displayName to backends - used for selection dialog Backend selection now saved with provider name Added currentSpeed() to TTSBackendBase, works like currentVoice() Added XBMCAudioTTSBackendBase backend base Added ESpeak_XA_TTSBackend which uses subprocess and XBMC audio and implements currentSpeed() Added a fix for OK speaking as Oklahoma Settings now only shows 'Voices' option for the currently displayed speech engine
Merge branch 'master' of https://github.com/ruuk/service.xbmc.tts
Handle stopSFX in flite for ATV2
Forgot to remove UTF8 decoding from SpeechDispatcherBackend.
SapiTTSBackend: Added support for setting voices. Also reverted utf8 decoding for NVDA and Sapi TTSBackends as it is no longer needed after the latest refactor.
ESpeakTTSBackend: prevent double speaking. I don't know when this did crep in.
Merge branch 'master' of https://github.com/ruuk/service.xbmc.tts
SpeechDispatcherTTSBackend: handle connection lost errors e.g. while speech-dispatcher daemon is restarted.
Addon addon description to spoken info when pressing F3 in the addon browser