@@ -1,5 +1,5 @@
 # -*- coding: utf-8 -*-
-import xbmc
+import os, re, codecs, xbmc
 
 '''
 Table data format:
@@ -105,8 +105,8 @@ winNames = {	10000: 10000, #Home
 
 winTexts = {	10100:('2','3','4'), #Yes/No Dialog
 				12002:('2','3','4'), #OK Dialog
-				10103:('311',),#Virtual Keyboard
-				10147:('5',) #Text Viewer
+				10103:('311',) #Virtual Keyboard
+				
 
 }
 
@@ -116,10 +116,36 @@ winExtraTexts = {	10000:(555,'$INFO[System.Time]',8,'$INFO[Weather.Temperature]'
 							19114,
 							'$INFO[ListItem.Property(Addon.Version)]',
 							21821,'$INFO[ListItem.Property(Addon.Description)]'
-					)
+					),
+					10147:('textbox',) #Text Viewer
+					
+}
+
+def textviewerText(winID):
+	folderPath = xbmc.getInfoLabel('Container.FolderPath')
+	if folderPath.startswith('addons://'):
+		changelog = os.path.join(xbmc.getInfoLabel('ListItem.Property(Addon.Path)'),'changelog.txt')
+		if not os.path.exists(changelog): return None
+		ret = []
+		with codecs.open(changelog,'r','utf-8') as f:
+			lines = f.readlines()
+		for l in lines:
+			if not re.search('\w',l): continue
+			ret.append(l.strip())
+		return ret
+	return None
+
+textboxTexts = { 10147:{'type':'function','function':textviewerText}
 
 }
 
+def getTextBoxTexts(winID):
+	if not winID in textboxTexts: return None
+	info = textboxTexts[winID]
+	if info['type'] == 'function':
+		return info['function'](winID)
+	return None
+	
 def getWindowName(winID):
 	if not winID in winNames: return u''
 	name = winNames[winID]
@@ -135,6 +161,9 @@ def getWindowTexts(winID,table=winTexts):
 			ret.append(xbmc.getLocalizedString(sid))
 		elif sid.isdigit():
 			ret.append(xbmc.getInfoLabel('Control.GetLabel({0})'.format(sid)).decode('utf-8'))
+		elif sid == 'textbox':
+			texts = getTextBoxTexts(winID)
+			if texts: ret += texts
 		elif sid.startswith('$INFO['):
 			info = sid[6:-1]
 			ret.append(xbmc.getInfoLabel(info).decode('utf-8'))
