@@ -2,11 +2,11 @@
 <settings>
   <category label="Main">
     <setting label="Default TTS Engine" type="action" id="backend" action="RunScript(service.xbmc.tts,backend_dialog)"/>
-    <setting id="voice.Flite" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.Flite)" visible="eq(-1,Flite)" />
-    <setting id="voice.eSpeak" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.eSpeak)" visible="eq(-2,eSpeak)" />
-    <setting id="voice.eSpeak-XA" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.eSpeak-XA)" visible="eq(-3,eSpeak-XA)" />
-    <setting id="voice.SAPI" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.SAPI)" visible="eq(-4,SAPI)" />
-    <setting label="Speed" type="slider" id="speed.eSpeak-XA" option="int" default="175" range="80,450" visible="eq(-5,eSpeak-XA)" />
+    <setting id="voice.Flite" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.Flite)" visible="eq(-1,Flite)" />
+    <setting id="voice.eSpeak" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.eSpeak)" visible="eq(-2,eSpeak)" />
+    <setting id="voice.eSpeak-XA" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.eSpeak-XA)" visible="eq(-3,eSpeak-XA)" />
+    <setting id="voice.SAPI" subsetting="true" label="Voice" type="action" action="RunScript(service.xbmc.tts,voice_dialog.SAPI)" visible="eq(-4,SAPI)" />
+    <setting label="Speed" type="slider" id="speed.eSpeak-XA" subsetting="true" option="int" default="175" range="80,450" visible="eq(-5,eSpeak-XA)" />
     <setting label="Install Keymap" type="action" action="RunScript(service.xbmc.tts,install_keymap)"/>
   </category>
 </settings>
